fix alignment issue with scroll text

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ body {
 
 h4 {
   position: fixed;
-  right: 50%;
+  right: 48%;
   bottom: 0px;
   text-align: center;
   font-family: 'Encode Sans SC', sans-serif;
